update OpenStack manifest in /deploying/openstack/install_cf_openstack.html